# cargo-aur-packer

./: Cargo.toml  README.org
src/: main.rs
