[package]
name = "cargo-makepkg"
version = "0.1.0"
authors = ["ur name <legendofmiracles@protonmail.com"]
edition = "2018"
description = "A PKGBUILD generator, for rust projects"
license = "MIT"
homepage = "https://github.com/alx365/cargo-aur"
repository = "https://tgithub.com/alx365/cargo-aur"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde_derive = "*"
serde = "*"
dialoguer = "*"
