[package]
name = "cargo-aur-packer"
version = "0.1.2"
authors = ["ur name <legendofmiracles@protonmail.com"]
edition = "2018"
description = "A PKGBUILD generator, for rust projects"
license = "MIT"
homepage = "https://github.com/alx365/cargo-aur"
repository = "https://github.com/alx365/cargo-aur"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde_derive = "1.0.115"
serde = "1.0.115 "
dialoguer = "0.6.2"
